put a href around enter button to click to correct page

--- a/markup/_dist/contests.html
+++ b/markup/_dist/contests.html
@@ -140,9 +140,8 @@
                                 <td>71/100</td>
                                 <td>3</td>
                                 <td>1000</td>
-                                <td>
-                                  <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                </td>
+                                <td><a href="enter_contests.html">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                 <td>STARTED</td>
                               </tr>
                               <tr>
@@ -151,9 +150,8 @@
                                 <td>71/100</td>
                                 <td>3</td>
                                 <td>1000</td>
-                                <td>
-                                  <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                </td>
+                                <td><a href="enter_contests.html">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                 <td>STARTED</td>
                               </tr>
                               <tr>
@@ -162,9 +160,8 @@
                                 <td>71/100</td>
                                 <td>3</td>
                                 <td>1000</td>
-                                <td>
-                                  <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                </td>
+                                <td><a href="enter_contests.html">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                 <td>STARTED</td>
                               </tr>
                               <tr>
@@ -173,9 +170,8 @@
                                 <td>71/100</td>
                                 <td>3</td>
                                 <td>1000</td>
-                                <td>
-                                  <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                </td>
+                                <td><a href="enter_contests.html">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                 <td>STARTED</td>
                               </tr>
                               <tr>
@@ -184,9 +180,8 @@
                                 <td>71/100</td>
                                 <td>3</td>
                                 <td>1000</td>
-                                <td>
-                                  <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                </td>
+                                <td><a href="enter_contests.html">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                 <td>STARTED</td>
                               </tr>
                               <tr>
@@ -195,9 +190,8 @@
                                 <td>71/100</td>
                                 <td>3</td>
                                 <td>1000</td>
-                                <td>
-                                  <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                </td>
+                                <td><a href="enter_contests.html">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                 <td>STARTED</td>
                               </tr>
                               <tr>
@@ -206,9 +200,8 @@
                                 <td>71/100</td>
                                 <td>3</td>
                                 <td>1000</td>
-                                <td>
-                                  <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary btn-sm">enter</button>
-                                </td>
+                                <td><a href="enter_contests.html">
+                                    <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                                 <td>STARTED</td>
                               </tr>
                               <tr>
@@ -325,9 +318,8 @@
                 <table class="table table-info1 buttons">
                   <tbody>
                     <tr>
-                      <td>
-                        <button type="button" data-toggle="modal" data-target="#enterContestsModal" class="btn btn-primary">Enter</button>
-                      </td>
+                      <td><a href="enter_contests.html">
+                          <button type="button" class="btn btn-primary btn-sm">enter</button></a></td>
                       <td>
                         <button type="button" class="btn btn-default">Payout</button>
                       </td>
