my current contest table component

--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -97,7 +97,7 @@
           </div>
           <div class="row">
             <div class="col-sm-12 col col-lg-6 col-xl-8">
-              <h6>Matches</h6>
+              <h6 class="d-inline-block">Matches</h6>
               <div class="matches">
                 <div class="matches__scrollarea">
                         <div class="matches__result">
@@ -224,7 +224,77 @@
               </div>
             </div>
             <div class="col-sm-12 col col-lg-6 col-xl-4">
-              <div class="current-contents"></div>
+              <h6 class="d-inline-block">My current contests</h6><a class="btn btn-primary btn-sm btn-inline">Refresh</a>
+              <div class="current-contents">
+                <div class="nl-table-responsive">
+                  <div class="nl-table-mw table-current-contests">
+                    <table class="table table-striped">
+                      <thead>
+                        <tr>
+                          <th>Contests name</th>
+                          <th>Team name</th>
+                          <th>PMR</th>
+                          <th>Rank</th>
+                        </tr>
+                      </thead>
+                    </table>
+                    <div class="nl-table-scroll2">
+                      <table class="table table-striped">
+                        <tbody>
+                                <tr>
+                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
+                                  <td>TEAM NAME LONG 111</td>
+                                  <td>350 min</td>
+                                  <td>114/150</td>
+                                </tr>
+                                <tr>
+                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
+                                  <td>TEAM NAME LONG 111</td>
+                                  <td>350 min</td>
+                                  <td>114/150</td>
+                                </tr>
+                                <tr>
+                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
+                                  <td>TEAM NAME LONG 111</td>
+                                  <td>350 min</td>
+                                  <td>114/150</td>
+                                </tr>
+                                <tr>
+                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
+                                  <td>TEAM NAME LONG 111</td>
+                                  <td>350 min</td>
+                                  <td>114/150</td>
+                                </tr>
+                                <tr>
+                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
+                                  <td>TEAM NAME LONG 111</td>
+                                  <td>350 min</td>
+                                  <td>114/150</td>
+                                </tr>
+                                <tr>
+                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
+                                  <td>TEAM NAME LONG 111</td>
+                                  <td>350 min</td>
+                                  <td>114/150</td>
+                                </tr>
+                                <tr>
+                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
+                                  <td>TEAM NAME LONG 111</td>
+                                  <td>350 min</td>
+                                  <td>114/150</td>
+                                </tr>
+                                <tr>
+                                  <td>Football 1775 LONGFootballFootballFootballFootball</td>
+                                  <td>TEAM NAME LONG 111</td>
+                                  <td>350 min</td>
+                                  <td>114/150</td>
+                                </tr>
+                        </tbody>
+                      </table>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
