lined out team name on teams page with first column and made soccer have 11 players and nfl 9

--- a/markup/_dist/my_teams_soccer.html
+++ b/markup/_dist/my_teams_soccer.html
@@ -137,20 +137,6 @@
                       </thead>
                       <tbody>
                         <tr>
-                          <td></td>
-                          <td>Player name</td>
-                          <td class="pos">D</td>
-                          <td>30</td>
-                          <td>$0</td>
-                        </tr>
-                        <tr>
-                          <td></td>
-                          <td>Player name</td>
-                          <td class="pos">D</td>
-                          <td>30</td>
-                          <td>$0</td>
-                        </tr>
-                        <tr>
                           <td class="indicated"><span class="played indicator"></span></td>
                           <td>Player name</td>
                           <td class="pos">D</td>
@@ -180,6 +166,34 @@
                         </tr>
                         <tr>
                           <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="not-playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="not-playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
                           <td class="pos">D</td>
                           <td>30</td>
@@ -306,6 +320,20 @@
                           <td>30</td>
                           <td>$0</td>
                         </tr>
+                        <tr>
+                          <td class="indicated"><span class="not-playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
                       </tbody>
                     </table>
                   </div>
@@ -413,6 +441,20 @@
                           <td>30</td>
                           <td>$0</td>
                         </tr>
+                        <tr>
+                          <td class="indicated"><span class="not-playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
                       </tbody>
                     </table>
                   </div>
@@ -501,6 +543,20 @@
                         </tr>
                         <tr>
                           <td></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="not-playing indicator"></span></td>
+                          <td>Player name</td>
+                          <td class="pos">D</td>
+                          <td>30</td>
+                          <td>$0</td>
+                        </tr>
+                        <tr>
+                          <td class="indicated"><span class="playing indicator"></span></td>
                           <td>Player name</td>
                           <td class="pos">D</td>
                           <td>30</td>
