Removed unused classes

--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -96,7 +96,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-sm-12 col col-lg-6 col-xl-8">
+            <div class="col-sm-12 col-lg-6 col-xl-8">
               <h6 class="d-inline-block">Matches</h6>
               <div class="matches">
                 <div class="matches__scrollarea">
@@ -223,7 +223,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-12 col col-lg-6 col-xl-4">
+            <div class="col-sm-12 col-lg-6 col-xl-4">
               <h6 class="d-inline-block">My current contests</h6><a class="btn btn-primary btn-sm btn-inline">Refresh</a>
               <div class="current-contents">
                 <div class="nl-table-responsive">
