contest info table component

--- a/markup/_dist/live_score.html
+++ b/markup/_dist/live_score.html
@@ -297,6 +297,119 @@
               </div>
             </div>
           </div>
+          <div class="row">
+            <div class="col-sm-12 col-lg-6 col-xl-4">
+              <h6 class="d-inline-block">Contest info</h6>
+              <div class="nl-contest-info-table">
+                <div class="table-heading">
+                  <div class="dropdown">
+                    <button id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-secondary dropdown-toggle">Contest touchdowns all day!</button>
+                    <div aria-labelledby="dropdownMenuButton" class="dropdown-menu"><a class="dropdown-item">Team A</a><a class="dropdown-item">Team B</a><a class="dropdown-item">Team C</a></div>
+                  </div>
+                </div>
+                <table class="table table-info1">
+                  <tbody>
+                    <tr>
+                      <td>
+                        <div class="leaders-list">
+                          <p class="tit">First Game</p>
+                          <p>09/14/2017 08:25 AM</p>
+                          <p class="tit">Week</p>
+                          <p>3</p>
+                          <p class="tit">Prize money</p>
+                          <p>1.000 NLC</p>
+                          <p class="tit"></p>
+                          <button class="btn btn-primary">Payout</button>
+                        </div>
+                      </td>
+                      <td>
+                        <div class="leaders-list">
+                          <p class="tit">Last game</p>
+                          <p>19/07-2017 08:25 AM</p>
+                          <p class="tit">Buy-in</p>
+                          <p>10</p>
+                          <p class="tit">Registered Teams</p>
+                          <p>198 / 200</p>
+                          <p class="tit"></p>
+                          <button class="btn btn-warning">Withdraw</button>
+                        </div>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+                <table class="table table-info3">
+                  <thead>
+                    <tr>
+                      <th></th>
+                      <th>Contestant</th>
+                      <th>Score</th>
+                    </tr>
+                  </thead>
+                </table>
+                <div class="nl-table-scroll2">
+                  <table class="table table-striped table-info4">
+                    <tbody>
+                            <tr>
+                              <td>1.</td>
+                              <td>Username xxx</td>
+                              <td>Score</td>
+                            </tr>
+                            <tr>
+                              <td>1.</td>
+                              <td>Username xxx</td>
+                              <td>Score</td>
+                            </tr>
+                            <tr>
+                              <td>1.</td>
+                              <td>Username xxx</td>
+                              <td>Score</td>
+                            </tr>
+                            <tr>
+                              <td>1.</td>
+                              <td>Username xxx</td>
+                              <td>Score</td>
+                            </tr>
+                            <tr>
+                              <td>1.</td>
+                              <td>Username xxx</td>
+                              <td>Score</td>
+                            </tr>
+                            <tr>
+                              <td>1.</td>
+                              <td>Username xxx</td>
+                              <td>Score</td>
+                            </tr>
+                            <tr>
+                              <td>1.</td>
+                              <td>Username xxx</td>
+                              <td>Score</td>
+                            </tr>
+                            <tr>
+                              <td>1.</td>
+                              <td>Username xxx</td>
+                              <td>Score</td>
+                            </tr>
+                            <tr>
+                              <td>1.</td>
+                              <td>Username xxx</td>
+                              <td>Score</td>
+                            </tr>
+                            <tr>
+                              <td>1.</td>
+                              <td>Username xxx</td>
+                              <td>Score</td>
+                            </tr>
+                            <tr>
+                              <td>1.</td>
+                              <td>Username xxx</td>
+                              <td>Score</td>
+                            </tr>
+                    </tbody>
+                  </table>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
