Cleaned up my teams and enter contests for both sports

--- a/markup/_dist/enter_contests.html
+++ b/markup/_dist/enter_contests.html
@@ -90,17 +90,21 @@
       </div>
     </header>
     <main>
-      <section class="nl-section nl-players nl-enter-contests">
+      <section class="nl-section nl-players nl-enter-contests soccer">
         <div class="container container-narrow">
           <div class="row">
             <div class="col-md-12 col-lg-6">
               <div class="heading-search">
-                <h1 class="heading-search__header">Teams</h1>
-                <div class="heading-search__search">
-                  <div class="dropdown">
-                    <button id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-secondary dropdown-toggle">Select your team</button>
-                    <div aria-labelledby="dropdownMenuButton" class="dropdown-menu"><a class="dropdown-item">Team A</a><a class="dropdown-item">Team B</a><a class="dropdown-item">Team C</a></div>
+                <h1 class="heading-search__header">Enter contest</h1>
+                <div class="row">
+                  <div class="col-md-4 col-lg-3"></div>
+                  <div class="heading-search__search col-md-4 col-lg-6">
+                    <div class="dropdown">
+                      <button id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-secondary dropdown-toggle">Select your team</button>
+                      <div aria-labelledby="dropdownMenuButton" class="dropdown-menu"><a class="dropdown-item">Team A</a><a class="dropdown-item">Team B</a><a class="dropdown-item">Team C</a></div>
+                    </div>
                   </div>
+                  <div class="col-md-4 col-lg-3"></div>
                 </div>
               </div>
               <div class="nl-team-info">
@@ -324,13 +328,11 @@
                       <td>
                         <div class="leaders-list">
                           <p class="tit">First Game</p>
-                          <p>Goals for Everyone</p>
+                          <p>19-07-2017 08:25 AM</p>
                           <p class="tit">Week</p>
                           <p>3</p>
                           <p class="tit">Prize money</p>
                           <p>1.000 NLC</p>
-                          <p class="tit"></p>
-                          <button class="btn btn-primary">Payout</button>
                         </div>
                       </td>
                       <td>
@@ -400,6 +402,15 @@
                     </tbody>
                   </table>
                 </div>
+                <table class="table table-info3">
+                  <thead>
+                    <tr>
+                      <th> 
+                        <button class="btn btn-primary">Payout</button>
+                      </th>
+                    </tr>
+                  </thead>
+                </table>
               </div>
             </div>
           </div>
