--- a/markup/_dist/my_teams.html
+++ b/markup/_dist/my_teams.html
@@ -98,22 +98,10 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-md-12"><a href="create_team_football.html"> 
+            <div class="col-6 col-sm-6 col-md-6 col-lg-8"><a href="create_team_football.html"> 
                 <div class="btn btn-primary btn-lg btn-create-team">Create team</div></a></div>
-          </div>
-          <div class="row">
-            <div class="col-md-8">
-              <div class="nl-status-wrapper">
-                <ul>
-                  <li><span class="playing indicator"></span><span>Playing</span></li>
-                  <li><span class="played indicator"></span><span>Played</span></li>
-                  <li><span class="not-playing indicator"></span><span>Not Playing</span></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-4 nl-tar">
-              <div class="btn btn-primary nl-m-b-225">Create helmet</div>
-            </div>
+            <div class="col-6 col-sm-6 col-md-6 col-lg-4 nl-tar"><a href="#"> 
+                <div class="btn btn-primary btn-lg btn-create-team">Create Helmet</div></a></div>
           </div>
           <div class="row nl-m-b-25">
             <div class="col-12 col-md-6 col-lg-6 col-xl-3">
@@ -121,7 +109,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p><span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down" class="hidden-xs-down">
+                      <p>team NLC2</p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down" class="hidden-xs-down">
                     </div>
                   </div>
                 </div>
@@ -230,7 +218,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p><span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                      <p>team NLC2</p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
                     </div>
                   </div>
                 </div>
@@ -339,7 +327,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p><span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                      <p>team NLC2</p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
                     </div>
                   </div>
                 </div>
@@ -448,7 +436,7 @@
                 <div class="row">
                   <div class="col-12">
                     <div class="nl-team-card table-data-field">
-                      <p><span class="title">team NLC2</span></p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
+                      <p>team NLC2</p><img src="assets/img/helmet.png" alt="helmet" class="hidden-xs-down">
                     </div>
                   </div>
                 </div>
