--- a/markup/_dist/my_teams_soccer.html
+++ b/markup/_dist/my_teams_soccer.html
@@ -101,26 +101,14 @@
             <div class="col-md-12"><a href="create_team.html"> 
                 <div class="btn btn-primary btn-lg btn-create-team">Create team</div></a></div>
           </div>
-          <div class="row">
-            <div class="col-md-8">
-              <div class="nl-status-wrapper">
-                <ul>
-                  <li><span class="playing indicator"></span><span>Playing</span></li>
-                  <li><span class="played indicator"></span><span>Played</span></li>
-                  <li><span class="not-playing indicator"></span><span>Not Playing</span></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-4 nl-tar">
-              <div class="btn btn-primary nl-m-b-225">Create helmet</div>
-            </div>
-          </div>
           <div class="row nl-m-b-25">
             <div class="col-12 col-md-6 col-lg-6 col-xl-3">
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
-                    <div class="nl-team-card table-data-field"><span class="title">Team name NLC2</span></div>
+                    <div class="nl-team-card table-data-field">
+                      <p>Team name NLC2</p>
+                    </div>
                   </div>
                 </div>
                 <div class="row">
@@ -241,7 +229,9 @@
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
-                    <div class="nl-team-card table-data-field"><span class="title">Team name NLC2</span></div>
+                    <div class="nl-team-card table-data-field">
+                      <p>Team name NLC2</p>
+                    </div>
                   </div>
                 </div>
                 <div class="row">
@@ -362,7 +352,9 @@
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
-                    <div class="nl-team-card table-data-field"><span class="title">Team name NLC2</span></div>
+                    <div class="nl-team-card table-data-field">
+                      <p>Team name NLC2</p>
+                    </div>
                   </div>
                 </div>
                 <div class="row">
@@ -483,7 +475,9 @@
               <div class="nl-card-wrapper">
                 <div class="row">
                   <div class="col-12">
-                    <div class="nl-team-card table-data-field"><span class="title">Team name NLC2</span></div>
+                    <div class="nl-team-card table-data-field">
+                      <p>Team name NLC2</p>
+                    </div>
                   </div>
                 </div>
                 <div class="row">
