--- a/markup/_dist/football_enter_contests.html
+++ b/markup/_dist/football_enter_contests.html
@@ -93,14 +93,18 @@
       <section class="nl-section nl-players nl-enter-contests">
         <div class="container container-narrow">
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-md-12 col-lg-6">
               <div class="heading-search">
-                <h1 class="heading-search__header">Teams</h1>
-                <div class="heading-search__search">
-                  <div class="dropdown">
-                    <button id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-secondary dropdown-toggle">Select your team</button>
-                    <div aria-labelledby="dropdownMenuButton" class="dropdown-menu"><a class="dropdown-item">Team A</a><a class="dropdown-item">Team B</a><a class="dropdown-item">Team C</a></div>
+                <h1 class="heading-search__header">Enter contest</h1>
+                <div class="row">
+                  <div class="col-md-4 col-lg-3"></div>
+                  <div class="heading-search__search col-md-4 col-lg-6">
+                    <div class="dropdown">
+                      <button id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-secondary dropdown-toggle">Select your team</button>
+                      <div aria-labelledby="dropdownMenuButton" class="dropdown-menu"><a class="dropdown-item">Team A</a><a class="dropdown-item">Team B</a><a class="dropdown-item">Team C</a></div>
+                    </div>
                   </div>
+                  <div class="col-md-4 col-lg-3"></div>
                 </div>
               </div>
               <div class="nl-team-info">
@@ -133,49 +137,49 @@
                 <div class="midfielder-line"></div>
                 <div class="defender-line"></div>
                 <div class="player-main-block football">
-                  <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/img-FLEX.png" alt="FLEX">
+                  <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/FLEX.png" alt="FLEX">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="K" class="nl-player-block nl-K-position"><img src="assets/img/football/img-K.png" alt="K">
+                  <div data-position="K" class="nl-player-block nl-K-position"><img src="assets/img/football/K.png" alt="K">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/img-LRB.png" alt="LRB">
+                  <div data-position="LRB" class="nl-player-block nl-LRB-position"><img src="assets/img/football/LRB.png" alt="LRB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/img-RRB.png" alt="RRB">
+                  <div data-position="RRB" class="nl-player-block nl-RRB-position"><img src="assets/img/football/RRB.png" alt="RRB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/img-QB.png" alt="QB">
+                  <div data-position="QB" class="nl-player-block nl-QB-position"><img src="assets/img/football/QB.png" alt="QB">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/img-LWR.png" alt="LWR">
+                  <div data-position="LWR" class="nl-player-block nl-LWR-position"><img src="assets/img/football/LWR.png" alt="LWR">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/img-RWR.png" alt="RWR">
+                  <div data-position="RWR" class="nl-player-block nl-RWR-position"><img src="assets/img/football/RWR.png" alt="RWR">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
                     </div>
                   </div>
-                  <div data-position="TE" class="nl-player-block nl-TE-position"><img src="assets/img/football/img-TE.png" alt="TE">
+                  <div data-position="TE" class="nl-player-block nl-TE-position"><img src="assets/img/football/TE.png" alt="TE">
                     <div class="nl-player-block--data">
                       <p>gronkowski</p>
                       <p class="data"><span>12.67</span> <span>$42000</span></p>
@@ -253,6 +257,12 @@
                             <td>30</td>
                             <td>$0</td>
                           </tr>
+                          <tr>
+                            <td>Player name</td>
+                            <td class="pos">TE</td>
+                            <td>30</td>
+                            <td>$0</td>
+                          </tr>
                         </tbody>
                       </table>
                     </div>
@@ -260,7 +270,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-md-12 col-lg-6">
               <div class="nl-contest-info-title">
                 <h1 class="heading-search__header">Contest information</h1>
               </div>
@@ -289,13 +299,11 @@
                       <td>
                         <div class="leaders-list">
                           <p class="tit">First Game</p>
-                          <p>Goals for Everyone</p>
+                          <p>19-07-2017 08:25 AM</p>
                           <p class="tit">Week</p>
                           <p>3</p>
                           <p class="tit">Prize money</p>
                           <p>1.000 NLC</p>
-                          <p class="tit"></p>
-                          <button class="btn btn-primary">Payout</button>
                         </div>
                       </td>
                       <td>
@@ -365,6 +373,15 @@
                     </tbody>
                   </table>
                 </div>
+                <table class="table table-info3">
+                  <thead>
+                    <tr>
+                      <th> 
+                        <button class="btn btn-primary">Payout</button>
+                      </th>
+                    </tr>
+                  </thead>
+                </table>
               </div>
             </div>
           </div>
