changed positions on field for enter contest field, made all h1 seem on same height, filtering margins are now equal

--- a/markup/_dist/enter_contests.html
+++ b/markup/_dist/enter_contests.html
@@ -132,7 +132,7 @@
                 <button type="button" class="btn btn-team btn-big-radius active field-view-btn">field view</button>
                 <button type="button" class="btn btn-team btn-big-radius list-view-btn">list view</button>
               </div>
-              <div class="nl-team-field">
+              <div class="nl-team-field soccer">
                 <div class="striker-line"></div>
                 <div class="midfielder-line"></div>
                 <div class="defender-line"></div>
