update block width and container with to become wider

--- a/markup/_dist/homepage.html
+++ b/markup/_dist/homepage.html
@@ -91,13 +91,13 @@
     </header>
     <main>
       <section class="nl-section nl-players homepage">
-        <div class="container">
+        <div class="container-wider">
           <div class="row sports-options">
             <h3 class="title col-lg-6">Pick Your Sport:</h3>
             <div class="sports-icon col-lg-6"><img src="assets/img/football.png" alt="" class="sports"><img src="assets/img/basketball.png" alt="" class="sports"><img src="assets/img/americanfootball.png" alt="" class="sports"><img src="assets/img/baseball.png" alt="" class="sports"><img src="assets/img/cricket.png" alt="" class="sports"><img src="assets/img/hockey.png" alt="" class="sports"><img src="assets/img/mma.png" alt="" class="sports"></div>
           </div>
           <div class="row">
-            <div class="col-lg-6 position">
+            <div class="col-lg-6 col-xl-5 position">
               <h5 class="text-center visible-xxs subtitle position">TOP 5<span>Tight ends</span></h5>
               <h5 class="hidden-xxs subtitle">TOP 5<span class="position-subtitle"> 
                   <div class="dropdown player-position">
@@ -397,7 +397,7 @@
                 });
               </script>
             </div>
-            <div class="col-lg-6 week">
+            <div class="col-lg-6 offset-xl-1 col-xl-6 week">
               <h5 class="text-center visible-xxs subtitle">TOP 5<span>Managers</span>in <span class="week">Week 3</span></h5>
               <h5 class="hidden-xxs subtitle">TOP 5<span>Managers  </span>in<span> 
                   <div class="dropdown week-position">
@@ -1063,7 +1063,7 @@
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-6 field">
+            <div class="col-lg-6 col-xl-5 field">
               <div class="homepage-fieldpage">
                 <div class="row">
                   <div class="col-md-12">
@@ -1071,7 +1071,7 @@
                   </div>
                 </div>
                 <div class="row nl-no-wrap field-dropdown">
-                  <div class="col-lg-12 nl-team-600">
+                  <div class="col-lg-12">
                     <div class="dropdown">
                       <button type="button" data-toggle="dropdown" class="btn btn-primary">FantasyFootballGod<i class="fa fa-caret-down"></i></button>
                       <ul id="dropdown-in-field" class="dropdown-menu">
@@ -1258,8 +1258,8 @@
                 });
               </script>
             </div>
-            <div class="col-lg-6 contests">
-              <div class="row align-items-center">
+            <div class="col-lg-6 offset-xl-1 col-xl-6 contests">
+              <div class="row align-items-center upcoming-contests">
                 <div class="col-md-12">
                   <h5>upcoming contests</h5>
                 </div>
@@ -1276,7 +1276,7 @@
                     <div class="tab-content">
                       <div id="all" role="tabpanel" class="tab-pane active">
                         <div class="nl-table-responsive">
-                          <div class="nl-table-mw">
+                          <div class="nl-table-mw homepage-contest-content">
                             <table class="table table-striped">
                               <thead>
                                 <tr>
