--- a/markup/_dist/create_team.html
+++ b/markup/_dist/create_team.html
@@ -90,7 +90,7 @@
       </div>
     </header>
     <main>
-      <section class="nl-section nl-players nl-create-team">
+      <section class="nl-section nl-players nl-create-team soccer">
         <div class="container container-wider">
           <div class="row">
             <div class="col-md-12">
