big cleanup and responsiveness of code improvement

--- a/markup/_dist/contests.html
+++ b/markup/_dist/contests.html
@@ -278,7 +278,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-4">
+            <div class="col-md-8 offset-md-2 offset-lg-0 col-lg-4">
               <div class="nl-contest-info-title">
                 <h3>Contest info</h3>
               </div>
@@ -300,13 +300,13 @@
                       </td>
                     </tr>
                     <tr>
-                      <td>
+                      <td class="bottom">
                         <div>       
                           <p class="tit">buy in:</p>
                           <p>10nlc2</p>
                         </div>
                       </td>
-                      <td>
+                      <td class="bottom">
                         <div>
                           <p class="tit">allowed teams:</p>
                           <p>2</p>
