--- a/markup/_dist/football_enter_contests.html
+++ b/markup/_dist/football_enter_contests.html
@@ -91,20 +91,20 @@
     </header>
     <main>
       <section class="nl-section nl-players nl-enter-contests">
-        <div class="container container-narrow">
+        <div class="container-fluid">
           <div class="row">
-            <div class="col-md-12 col-lg-6">
+            <div class="col-md-6 col-lg-6 col-xl-5">
               <div class="heading-search">
                 <h1 class="heading-search__header">Enter contest</h1>
                 <div class="row">
-                  <div class="col-md-4 col-lg-3"></div>
-                  <div class="heading-search__search col-md-4 col-lg-6">
+                  <div class="col-sm-3 col-md-2 col-lg-3"></div>
+                  <div class="heading-search__search col-sm-6 col-md-8 col-lg-6">
                     <div class="dropdown">
                       <button id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="btn btn-secondary dropdown-toggle">Select your team</button>
                       <div aria-labelledby="dropdownMenuButton" class="dropdown-menu"><a class="dropdown-item">Team A</a><a class="dropdown-item">Team B</a><a class="dropdown-item">Team C</a></div>
                     </div>
                   </div>
-                  <div class="col-md-4 col-lg-3"></div>
+                  <div class="col-md-2 col-lg-3"></div>
                 </div>
               </div>
               <div class="nl-team-info">
@@ -133,9 +133,6 @@
                 <button type="button" class="btn btn-team btn-big-radius list-view-btn">list view</button>
               </div>
               <div class="nl-team-field football">
-                <div class="striker-line"></div>
-                <div class="midfielder-line"></div>
-                <div class="defender-line"></div>
                 <div class="player-main-block football">
                   <div data-position="FLEX" class="nl-player-block nl-FLEX-position"><img src="assets/img/football/FLEX.png" alt="FLEX">
                     <div class="nl-player-block--data">
@@ -261,7 +258,7 @@
                             <td>Player name</td>
                             <td class="pos">TE</td>
                             <td>30</td>
-                            <td>$0</td>
+                            <td>$0							</td>
                           </tr>
                         </tbody>
                       </table>
@@ -270,7 +267,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-12 col-lg-6">
+            <div class="col-md-6 col-lg-5 offset-lg-1 col-xl-5 offset-xl-2">
               <div class="nl-contest-info-title">
                 <h1 class="heading-search__header">Contest information</h1>
               </div>
@@ -334,6 +331,42 @@
                 <div class="nl-table-scroll2">
                   <table class="table table-striped table-info4">
                     <tbody>
+                      <tr>
+                        <td>1</td>
+                        <td>Username</td>
+                        <td>MyTeamName</td>
+                        <td>37.90</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Username</td>
+                        <td>MyTeamName</td>
+                        <td>37.90</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Username</td>
+                        <td>MyTeamName</td>
+                        <td>37.90</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Username</td>
+                        <td>MyTeamName</td>
+                        <td>37.90</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Username</td>
+                        <td>MyTeamName</td>
+                        <td>37.90</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>Username</td>
+                        <td>MyTeamName</td>
+                        <td>37.90</td>
+                      </tr>
                       <tr>
                         <td>1</td>
                         <td>Username</td>
